--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>br.com.caelum</groupId>
-	<artifactId>vraptor-musicjungle</artifactId>
+	<artifactId>vote-no-restaurante</artifactId>
 	<version>4.2.0-RC4-SNAPSHOT</version>
 	<packaging>war</packaging>
 
@@ -145,7 +145,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>vraptor-musicjungle</finalName>
+		<finalName>vote-no-restaurante</finalName>
 		<outputDirectory>${basedir}/src/main/webapp/WEB-INF/classes</outputDirectory>
 		<plugins>
 			<plugin>
